# nexus-old

./: CMakeLists.txt  S10_config.mac  S10_init.mac  S1_config.mac  S1_init.mac  Untitled.ipynb  Untitled1.ipynb
g4bug/: CMakeLists.txt  g4bug.cc
macros/: CC.config.mac  CC.init.mac  GenericMesh.config.mac  GenericMesh.init.mac  LHM.config.mac  LHM.init.mac  NEW_2nuECEC.config.mac  NEW_2nuECEC.init.mac  NEW_gammas.config.mac  NEW_gammas.init.mac  NEW_mesh.config.mac  NEW_mesh.init.mac  NEW_realmesh.config.mac  NEW_realmesh.init.mac  NEW_track.config.mac  NEW_track.init.mac
macros/generators/: 2nu2K.mac
prod/: NEW_track.config.template  NEW_track.init.template  generate.py  generate_geantino.py  generate_mesh_performance.py  generate_orientation.py  generate_photo.py  generate_transparency.py  generate_transparency_sagg.py  launch_nexus.template  new_geantino.config.template  new_geantino.init.template  new_mesh_performance.config.template  new_mesh_performance.init.template  new_mesh_transparency.config.template  new_mesh_transparency_sagg.config.template  new_photon_tracking.config.border.template  new_photon_tracking.config.center.template  new_photon_tracking.config.mid.template  new_photon_tracking.init.template
source/: CMakeLists.txt
source/actions/: DefaultEventAction.h  SaveAllSteppingAction.cc
source/base/: ActionsFactory.cc  GeneratorFactory.cc  GeometryFactory.cc  PersistencyManager.cc  PersistencyManager.h
source/generators/: 2nu2KGenerator.cc  2nu2KGenerator.h  ScintillationGenerator.cc  ScintillationGenerator.cc~  ScintillationGenerator.h
(+10 files in other folders)
